# pg-ephemeral

./: Cargo.toml  LICENSE  README.md
crates/cli/: Cargo.toml
crates/pg-ephemeral/: Cargo.toml
crates/pg-ephemeral/examples/: basic.rs  containerized.rs
crates/pg-ephemeral/src/: ephemeral.rs  error.rs  lib.rs  macros.rs
crates/pg-ephemeral/src/common/: constants.rs  mod.rs  password.rs  port.rs
crates/pg-ephemeral/src/containerized/: config.rs  error.rs  impls.rs  mod.rs  tag.rs
crates/pg-ephemeral/src/daemon/: impls.rs  mod.rs
crates/pg-ephemeral/src/ephemeral/: builder.rs  constants.rs  impls.rs  mod.rs
crates/pg-ephemeral/src/local/: error.rs  impls.rs  mod.rs
crates/pg-ephemeral/src/local/config/: builder.rs  config.rs  error.rs  mod.rs
crates/pg-ephemeral/src/platform/: mod.rs  which.rs
crates/pg-ephemeral/src/platform/sys/: mod.rs  unix.rs  windows.rs
