[package]
name = "pg-ephemeral"
version = "0.1.0"
edition.workspace = true

[dependencies]
tempfile = "3.23.0"
thiserror = "2"
tokio = { version = "^1", features = ["full"] }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
tracing-subscriber = "0.3.20"

[features]
default = []
cli = []
tracing = ["dep:tracing"]
